# fullstack-starter-template

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  pyrightconfig.json
apps/admin-backend/: CLAUDE.md  pyproject.toml
apps/admin-backend/app/: __init__.py  dependencies.py  main.py
apps/admin-backend/app/models/: __init__.py  password_reset_token.py  refresh_token.py  user.py
apps/admin-backend/tests/: conftest.py  test_admin_auth.py  test_admin_dashboard.py  test_admin_users.py
apps/admin-frontend/: CLAUDE.md  index.html  package.json  vite.config.ts
apps/admin-frontend/tests/: client.test.ts  setup.ts  toast.test.ts  validation.test.ts
apps/web-backend/: CLAUDE.md  pyproject.toml
apps/web-backend/alembic/: env.py
apps/web-backend/alembic/versions/: 0001_create_users_table.py  27c7fe7620a7_add_password_reset_tokens.py  54272053116b_create_users_table.py  6bd091d30152_add_user_role_column.py  ae65af6a832a_add_refresh_tokens_table.py  d9fe24fda998_drop_refresh_tokens_and_password_reset_.py
apps/web-backend/app/: dependencies.py  main.py
apps/web-backend/app/models/: __init__.py  password_reset_token.py  refresh_token.py  user-profile.py  user.py
apps/web-backend/app/routes/: auth.py  health.py
apps/web-backend/app/services/: email.py
apps/web-backend/tests/: conftest.py  test_auth.py  test_health.py  test_password_reset.py
apps/web-frontend/: .oxlintrc.json  CLAUDE.md  package.json  vite.config.ts  vitest.config.ts
apps/web-frontend/src/: App.vue  style.css
apps/web-frontend/tests/: EmptyState.test.ts  LoadingSpinner.test.ts  auth.test.ts  client.test.ts  passwordReset.test.ts  router.test.ts  validation.test.ts
docs/: first-feature-example.md
infra/: .env.docker  .env.example  docker-compose.yml
scripts/: generate_types.py  init_db.py  scaffold.py
scripts/tests/: test_generate_types.py  test_scaffold.py
(+42 files in other folders)
