[project]
name = "fullstack-starter-template"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = ["pytest>=8.0", "pytest-asyncio>=1.4.0", "httpx>=0.28.1", "ruff>=0.6"]

[tool.uv.workspace]
members = ["apps/web-backend", "apps/admin-backend", "packages/shared-py"]

[tool.uv.sources]
shared-py = { workspace = true }

[tool.ruff]
line-length = 120
